hphp/test/quick/resource.php.expectf
resource(1) of type (stream)
bool(true)
object(Foo) (0) {
}
bool(false)

Catchable fatal error: Argument 1 passed to f() must be an instance of resource, Foo given in %s on line 16
